[tool.poetry]
name = "orm"
version = "0.1.0"
description = ""
authors = ["Vitaliy Lobko <vitaliy.lobko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.40"
psycopg2 = "^2.9.3"
alembic = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
